# ds-agent

./: .gitignore  config.yaml  daily_meme.sh  kast_meme.sh  kast_post_today.py  main.py  post_meme.py  pyproject.toml  requirements.txt
agent/: llm_wrapper.py
config/: config.py
discord/: client.py
modules/: checker.py  runner.py  sender.py
